changes to height of page and fixing all the links on the page zith z-index

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,11 +11,15 @@ $dark-text-fill: rgba(236, 236, 236, 1);
 $dark-button-fill: #f2a365;
 $dark-bg-text-fill: rgba(48, 71, 94,0.05);
 
+html,body, #root, .App, .content {
+  height: 100%;
+}
+
 .App {
   font-family: 'Open Sans', sans-serif;
   background-color: #ffb997;
   max-width: 100%;
-  height: 100vh;
+  //height: 100vh;
   overflow: hidden;
   position: relative;
 }
@@ -206,7 +210,7 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
     }
 
     p {
-      max-width: 80% !important;
+      max-width: 100% !important;
       display: block;
     }
 
@@ -216,7 +220,6 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
     }
 
     a {
-      z-index: 1000000;
       font-size: .8rem !important;
       text-decoration: underline;
       color: rgba(10, 3, 43,0);
@@ -231,7 +234,7 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
     background-color: rgba(235, 235, 235, 0);
     color: rgba(10, 3, 43,0);
     padding: 1rem;
-    z-index: 5;
+    z-index: 600;
   }
   
   .container_modal h3 {
@@ -250,10 +253,8 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
   
   .container_modal p {
     position: relative;
-    display: block;
     max-width: 65%;
-    height: auto;
-    z-index: 6;
+    z-index: 500;
   }
 
   .container_modal img {
@@ -300,7 +301,7 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
   }
   
   .container_modal a {
-    z-index: 12;
+    position: relative;
     width: 20%;
     font-size: 1.4rem;
     margin-right: 1.2rem;
@@ -361,7 +362,6 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
   }
 
   .resume-height {
-    height: 100vh;
     overflow: visible;
     position: relative;
   }
@@ -495,7 +495,6 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
       font-family: 'Open Sans', sans-serif;
       background-color: #ffb997;
       max-width: 100%;
-      height: 100vh;
       position: relative;
       overflow: hidden;
     }
@@ -510,7 +509,6 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
 
     .resume-height {
       overflow-y: scroll;
-      height: 100vh !important;
     }
   
     .container_modal {
@@ -551,7 +549,6 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
       font-family: 'Open Sans', sans-serif;
       background-color: #ffb997;
       max-width: 100%;
-      height: 100vh;
       position: relative;
     }
 
@@ -561,7 +558,6 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
 
     .resume-height {
       overflow-y: scroll;
-      height: 100vh !important;
     }
   
     .container_modal {
